unpackaged/main/default/objects/nbavs__RecordingAccess__c/nbavs__RecordingAccess__c.object-meta.xml
<CustomObject>
    <label>Recording Access</label>
    <nameField>
        <displayFormat>RA-{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recording Access</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>