unpackaged/main/default/objects/nbavs__RecordingAccess__c/fields/nbavs__Access__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Access__c</fullName>
    <label>Can Access</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Groups</fullName>
            </value>
            <value>
                <fullName>Own</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>