unpackaged/main/default/objects/nbavs__RecordingAccess__c/fields/nbavs__Access_Granted_To__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Access_Granted_To__c</fullName>
    <label>Access Granted To</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Recording</fullName>
                <default>true</default>
                <label>Recording (including Insight data)</label>
            </value>
            <value>
                <fullName>Insights Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>