unpackaged/main/default/objects/nbavs__RecordingAccess__c/fields/nbavs__Group__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Record Purpose Group</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Selected Group does not have Record purpose</errorMessage>
        <filterItems>
            <field>nbavs__Group__c.nbavs__Record__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <infoMessage>Select Record Purpose Group</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>nbavs__Group__c</referenceTo>
    <relationshipLabel>Recording Access</relationshipLabel>
    <relationshipName>Recording_Access</relationshipName>
    <type>Lookup</type>
</CustomField>