unpackaged/main/default/objects/nbavs__RecordingAccess__c/fields/nbavs__Groups__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Groups__c</fullName>
    <label>Record Purpose Groups</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>