unpackaged/main/default/objects/nbavs__RecordingAccess__c/fields/nbavs__Type__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Group</fullName>
                <default>true</default>
                <label>Group</label>
            </value>
            <value>
                <fullName>User</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>