unpackaged/main/default/objects/nbavs__RecordingAccess__c/fields/nbavs__Unique__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Unique__c</fullName>
    <externalId>true</externalId>
    <label>Unique</label>
    <length>32</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>