unpackaged/main/default/objects/nbavs__RecordingAccess__c/fields/nbavs__User__c.field-meta.xml
<CustomField>
    <fullName>nbavs__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Natterbox Record License User</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Selected User does not have Natterbox Record License</errorMessage>
        <filterItems>
            <field>nbavs__User__c.nbavs__Record__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <infoMessage>Select Natterbox Record License User</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>nbavs__User__c</referenceTo>
    <relationshipLabel>Recording Access</relationshipLabel>
    <relationshipName>Recording_Access</relationshipName>
    <type>Lookup</type>
</CustomField>